--- a/python-wasm/the-guy-she-told-you-not-to-worry-about/style.css
+++ b/python-wasm/the-guy-she-told-you-not-to-worry-about/style.css
@@ -1,8 +1,60 @@
 :root {
    font-family: 'Courier New', Courier, monospace;
    font-size: 16px;
+   color: black;
+   font-weight: bold;
+}
+
+/* YOOO, goot text bro*/
+/* https://webdesign-assistant.com/effect-editor/css-effect-generator.php */
+@import url('https://fonts.googleapis.com/css?family=Archivo+Black');
+h1 {
+   text-align: center;
+   margin-top: 0;
+   font-family: "Archivo Black", sans-serif;
+   font-size: 73px;
+   color: rgb(255, 111, 0);
+   text-shadow: rgba(0, 128, 153, 0.75) 0px 0px 0px, rgba(0, 81, 149, 0.75) 4.1px 4.8px 0px, rgba(0, 36, 145, 0.75) 8.2px 9.6px 0px, rgba(6, 0, 142, 0.75) 12.2px 14.4px 0px, rgba(46, 0, 138, 0.75) 16.3px 19.2px 0px, rgba(84, 0, 134, 0.75) 20.4px 24px 0px, rgba(119, 0, 130, 0.75) 24.5px 28.8px 0px, rgba(126, 0, 100, 0.75) 28.5px 33.6px 0px, rgba(122, 0, 61, 0.75) 32.6px 38.4px 0px;
+}
+
+body {
+   background-image: url("data/grass.png");
+
 }
 
 .numba {
    width: 5em;
+}
+
+input {
+   margin-bottom: 5px;
+}
+
+form {
+   width: fit-content;
+
+   padding: 4px;
+
+   background: white;
+   border: 2px solid black;
+}
+
+#gigachad {
+   image-rendering:crisp-edges;
+   width: 900px;
+   position: absolute;
+   top: 250px;
+   left: 50px;
+}
+
+#factorial {
+   position: absolute;
+   top: 300px;
+   left: 50px;
+}
+
+#fibonacci {
+   position: absolute;
+   top: 340px;
+   left: 840px;
 }
