--- a/python-wasm/the-guy-she-told-you-not-to-worry-about/style.css
+++ b/python-wasm/the-guy-she-told-you-not-to-worry-about/style.css
@@ -19,7 +19,6 @@ h1 {
 
 body {
    background-image: url("data/grass.png");
-
 }
 
 .numba {
@@ -39,6 +38,26 @@ form {
    border: 2px solid black;
 }
 
+#chad {
+   image-rendering:crisp-edges;
+   width: 600px;
+   position: absolute;
+   top: 450px;
+   left: 650px;
+}
+
+#factorial {
+   position: absolute;
+   top: 640px;
+   left: 620px;
+}
+
+#circleSurface {
+   position: absolute;
+   top: 630px;
+   left: 1100px;
+}
+
 #gigachad {
    image-rendering:crisp-edges;
    width: 900px;
@@ -47,14 +66,50 @@ form {
    left: 50px;
 }
 
-#factorial {
+#circumference {
    position: absolute;
    top: 300px;
-   left: 50px;
+   left: 10px;
 }
 
 #fibonacci {
    position: absolute;
    top: 340px;
    left: 840px;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina');
+#chad-description {
+   position: absolute;
+   top: 550px;
+   left: 10px;
+
+    font-family: "Baloo Bhaina", cursive;
+    font-size: 29px;
+    color: hsl(360, 100%, 59%);
+    text-shadow: rgba(163, 0, 0, 0.75) 0px 0px 0px, rgba(143, 0, 0, 0.75) 4.2px 2.9px 1.9px, rgba(122, 0, 0, 0.75) 8.3px 5.8px 3.8px, rgba(102, 0, 0, 0.75) 12.5px 8.8px 5.7px, rgba(82, 0, 0, 0.75) 16.6px 11.7px 7.5px, rgba(61, 0, 0, 0.75) 20.8px 14.6px 9.4px, rgba(41, 0, 0, 0.75) 24.9px 17.5px 11.3px, rgba(20, 0, 0, 0.75) 29.1px 20.5px 13.2px, rgba(0, 0, 0, 0.75) 33.2px 23.4px 15.1px;
+}
+
+#jesus {
+   image-rendering:crisp-edges;
+   width: 600px;
+   position: absolute;
+   top: 260px;
+   left: 940px;
+}
+
+#sphereVolume {
+   position: absolute;
+   top: 300px;
+   left: 1300px;
+}
+
+#shting {
+   background-image: url("data/golden.png");
+   border-top: 3px solid black;
+   width: 100%;
+   height: 296px;
+   position: absolute;
+   top: 930px;
+   left: 0px;
 }
